--- a/module-06/css/style.css
+++ b/module-06/css/style.css
@@ -15,51 +15,50 @@ body {
     color: #999999;
 }
 
-img{
+img {
     display: block;
     max-width: 100%;
     height: auto;
 }
 
-.container{
+.container {
     width: 1200px;
     margin: 0px auto;
 }
 
-/* * {
+* {
     outline: 1px solid red;
-} */
+}
 
 /* header */
 
-.main-header{
+.main-header {
     margin-bottom: 128px;
 }
 
-.main-navigation{
+.main-navigation {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
     height: 50px;
+    /* padding-bottom: 14px; */
 
 }
 
-.navigation-items{
+.navigation-items {
     display: flex;
     justify-content: space-between;
+    width: 490px;
     margin: 0px;
     padding: 0px;
-    width: 490px;
     list-style: none;
     text-transform: uppercase;
-
 }
 
-.navigation-item {
-    
-}
+.navigation-item {}
 
-.nav-link{
+
+.nav-link {
     text-decoration: none;
     font-size: 14px;
     line-height: 1.2;
@@ -69,3 +68,189 @@ img{
 
 }
 
+.nav-link:after {
+    /* opacity: 0; */
+    display: block;
+    content: '';
+    width: auto;
+    height: 3px;
+    background-color: #f38181;
+    margin: 9px auto 0px;
+}
+
+
+.navigation-item:hover .nav-link {
+    color: #f38181;
+    /* opacity: 1; */
+}
+
+/* main */
+
+/* Amazing Services */
+
+.main-content {
+    text-align: center;
+}
+
+.services-section {
+    margin: 0px 0px 94px 0px;
+    padding: 0px;
+    font-size: 0px;
+}
+
+.title-slogan {
+    display: block;
+    font-size: 24px;
+    line-height: 1.2;
+    font-family: 'Kaushan Script', sans-serif;
+    font-weight: 400;
+    color: #333333;
+    margin-bottom: 18px;
+    padding: 0px;
+}
+
+.section-title {
+    font-size: 30px;
+    line-height: 1.2;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 700;
+    color: #333333;
+    text-transform: uppercase;
+    margin: 0px 0px 64px;
+    padding: 0px;
+}
+
+.section-title::after {
+    display: block;
+    content: '';
+    width: 60px;
+    height: 3px;
+    background-color: #f38181;
+    margin: 38px auto 0px;
+}
+
+.servises {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    list-style: none;
+    text-decoration: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.servise-item {
+    flex: 0 0 380px;
+    text-align: left;
+    padding: 0px 10px 0px 80px;
+    margin: 0px 10px 98px;
+    background-repeat: no-repeat;
+    background-position: 20px 0;
+}
+
+.servise-item::before {
+    display: block;
+    content: '';
+
+}
+
+.servise-item:nth-last-of-type(-n+3) {
+    margin-bottom: 0px;
+}
+
+.icon-alarm {
+    background-image: url(../img/alarm.png);
+}
+
+.icon-graph {
+    background-image: url(../img/line-graph.png);
+}
+
+.icon-computer {
+    background-image: url(../img/computer.png);
+}
+
+.icon-book {
+    background-image: url(../img/book.png);
+}
+
+.icon-home {
+    background-image: url(../img/home.png);
+}
+
+.icon-image {
+    background-image: url(../img/image.png);
+}
+
+.title-item {
+    font-size: 14px;
+    line-height: 1.2;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 400;
+    text-transform: uppercase;
+    color: #333333;
+    margin: 0px 0px 16px 0px;
+    padding: 0px;
+}
+
+.text-item {
+    font-size: 15px;
+    line-height: 1.6;
+    font-family: 'Roboto', sans-serif;
+    font-weight: 400;
+    color: #999999;
+    margin: 0px;
+    padding: 0px;
+}
+
+/* Meet our team */
+
+.text-item-team{
+margin: 0px 120px 92px;
+}
+
+.team-items{
+    display: flex;
+    justify-content: space-between;
+    list-style: none;
+    text-decoration: none;
+    margin: 0px;
+    padding: 0px;
+}
+
+.team-item{
+    
+}
+
+.icon-link{
+    list-style: none;
+}
+
+.team-link{
+    text-decoration: none;
+}
+
+
+
+
+
+
+
+
+
+
+
+.visually-hidden:not(:focus):not(:active),
+input[type="checkbox"].visually-hidden,
+input[type="radio"].visually-hidden {
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: 1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0, 0, 0, 0);
+    overflow: hidden;
+}
