--- a/module-06/css/style.css
+++ b/module-06/css/style.css
@@ -38,18 +38,17 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    min-height: 64px;
 }
 
 .site-logo {
-    margin-bottom: 12px;
+    margin: 29px 0px 12px;
 }
 
 .navigation-items {
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
-    margin: 0px;
+    margin: 38px 0px 0px 0px;
     padding: 0px;
     list-style: none;
     text-transform: uppercase;
@@ -118,6 +117,7 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-bottom: 82px;
 }
 
 .services-section {
@@ -127,7 +127,17 @@ img {
     margin: 0px 0px 94px 0px;
 }
 
+.wrapper-title {
+    position: relative;
+}
+
+.wrapper-services-title{
+    margin-bottom: 64px;
+}
+
 .title-slogan {
+    display: block;
+    text-align: center;
     font-size: 24px;
     line-height: 1.2;
     font-family: 'Kaushan Script', sans-serif;
@@ -144,23 +154,25 @@ img {
     font-weight: 700;
     color: #333333;
     text-transform: uppercase;
-    margin: 0px 0px 64px;
+    text-align: center;
+    margin: 0px 0px 36px 0px;
     padding: 0px;
 }
 
-.section-title::after {
-    display: block;
-    content: '';
+.section-title-underline {
+    position: absolute;
+    left: 50%;
+    transform: translateX(-50%);
     width: 60px;
     height: 3px;
     background-color: #f38181;
-    margin: 38px auto 0px;
+    margin: 0px auto;
 }
 
 .servises {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: space-around;
     list-style: none;
     text-decoration: none;
     margin: 0px;
@@ -171,7 +183,6 @@ img {
     flex: 0 0 380px;
     text-align: left;
     padding: 0px 10px 0px 80px;
-    margin: 0px 10px 98px;
     background-repeat: no-repeat;
     background-position: 20px 0;
 }
@@ -181,8 +192,8 @@ img {
     content: '';
 }
 
-.servise-item:nth-last-of-type(-n+3) {
-    margin-bottom: 0px;
+.servise-item:not(:nth-last-of-type(-n+3)) {
+    margin-bottom: 98px;
 }
 
 .icon-alarm {
@@ -236,20 +247,23 @@ img {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-bottom: 82px;
+}
+
+.wrapper-team-title{
+    margin-bottom: 44px;
 }
 
 .text-item-team {
     width: 954px;
     text-align: center;
-    margin-bottom: 92px;
+    margin-bottom: 90px;
 }
 
 .team-items {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    width: 1200px;
+    width: 100%;
     list-style: none;
     text-decoration: none;
     margin: 0px;
@@ -405,7 +419,7 @@ img {
     display: flex;
     justify-content: flex-end;
     height: 40px;
-    margin: 0px;
+    margin: 10px 0px;
 }
 
 .input-field {
