--- a/module-06/css/style.css
+++ b/module-06/css/style.css
@@ -28,6 +28,10 @@ img {
     margin: 0px auto;
 }
 
+*{
+    outline: 1px solid red;
+}
+
 /* header */
 
 .main-header {
@@ -148,6 +152,7 @@ img {
 }
 
 .section-title {
+    position: relative;
     font-size: 30px;
     line-height: 1.2;
     font-family: 'Montserrat', sans-serif;
@@ -166,7 +171,7 @@ img {
     width: 60px;
     height: 3px;
     background-color: #f38181;
-    margin: 0px auto;
+    margin: 0px;
 }
 
 .servises {
