--- a/module-07/css/style.css
+++ b/module-07/css/style.css
@@ -9,11 +9,10 @@ html {
 }
 
 body {
-    font-size: 15px;
-    line-height: unset;
-    font-family: 'Roboto', 'Montserrat', 'Kaushan Script', sans-serif;
-    /* font-family: 'Roboto Slab', serif; */
-    color: #999999;
+    font-size: 14px;
+    font-family: 'Roboto Slab', 'Montserrat', 'Droid Serif', serif;
+    color: rgb(119, 119, 119);
+    line-height: 1.2;
     margin: 0px;
     padding: 0px;
 }
@@ -25,59 +24,102 @@ img {
 }
 
 .container {
-    width: 1200px;
+    max-width: 940px;
     margin: 0px auto;
 }
+
+/* roboto-slab-regular - latin */
+@font-face {
+    font-family: 'Roboto Slab';
+    font-style: normal;
+    font-weight: 400;
+    src: local(''),
+        url('../fonts/roboto-slab-v10-latin-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/roboto-slab-v10-latin-regular.woff') format('woff');
+    /* Modern Browsers */
+}
+
+/* montserrat-regular - latin */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 400;
+    src: local('Montserrat Regular'), local('Montserrat-Regular'),
+        url('../fonts/montserrat-v14-latin-regular.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/montserrat-v14-latin-regular.woff') format('woff');
+    /* Modern Browsers */
+}
+
+/* montserrat-700 - latin */
+@font-face {
+    font-family: 'Montserrat';
+    font-style: normal;
+    font-weight: 700;
+    src: local('Montserrat Bold'), local('Montserrat-Bold'),
+        url('../fonts/montserrat-v14-latin-700.woff2') format('woff2'),
+        /* Super Modern Browsers */
+        url('../fonts/montserrat-v14-latin-700.woff') format('woff');
+    /* Modern Browsers */
+}
+
+* {
+    outline: 1px solid red;
+}
+
 
 /* header */
 
 .main-header {
-    margin-bottom: 114px;
+    margin-bottom: 98px;
 }
 
 .main-navigation {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    min-height: 64px;
+    /* min-height: 64px; */
 }
 
 .site-logo {
-    margin-bottom: 12px;
+    /* cursor: pointer; */
+    /* margin-bottom: 12px; */
 }
 
 .navigation-items {
     display: flex;
     justify-content: flex-end;
     flex-wrap: wrap;
-    margin: 0px;
+    margin: 48px 0px 0px;
     padding: 0px;
     list-style: none;
     text-transform: uppercase;
 }
 
-.navigation-item {
+/* .navigation-item {
     cursor: pointer;
     position: relative;
-}
+} */
 
 .navigation-item:not(:nth-of-type(5n)) {
-    margin-right: 58px;
+    margin-right: 40px;
 }
 
 .nav-link {
     display: block;
-    text-decoration: none;
     font-size: 14px;
-    line-height: 1.2;
     font-family: 'Montserrat', sans-serif;
     font-weight: 400;
-    color: #95e1d3;
-    text-align: center;
-    padding-bottom: 9px;
+    color: rgb(34, 34, 34);
+    text-transform: uppercase;
+    text-decoration: none;
+    line-height: 1.2;
+    /* margin-top: 42px; */
+    /* margin-bottom: 10px; */
 }
 
-.nav-link::after {
+/* .nav-link::after {
     position: absolute;
     content: '';
     width: 0;
@@ -86,7 +128,7 @@ img {
     bottom: 0;
     left: 50%;
     transition: all 0.2s linear;
-}
+} */
 
 .nav-link:hover::after,
 .nav-link:focus::after {
@@ -97,274 +139,117 @@ img {
 
 .nav-link:hover,
 .nav-link:focus {
-    color: #f38181;
+    color: rgb(254, 209, 54);
     transition: all 0.2s linear;
 }
 
 .site-logo:hover {
-    background-color: rgb(234, 240, 239);
+    background-color: rgba(254, 209, 54, .15);
     transition: all 0.2s linear;
 }
 
 .site-logo:focus {
-    background-color: rgb(234, 240, 239);
+    background-color: rgb(254, 209, 54, .15);
     transition: all 0.2s linear;
 }
 
 /* main */
 
-/* Amazing Services */
-
 .main-content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-}
-
-.services-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin: 0px 0px 94px 0px;
-}
-
-.title-slogan {
-    font-size: 24px;
-    line-height: 1.2;
-    font-family: 'Kaushan Script', sans-serif;
-    font-weight: 400;
-    color: #333333;
-    margin-bottom: 18px;
-    padding: 0px;
+    margin-bottom: 120px;
 }
 
 .section-title {
-    font-size: 30px;
-    line-height: 1.2;
+    font-size: 40px;
     font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    color: #333333;
+    color: rgb(34, 34, 34);
+    font-weight: bold;
     text-transform: uppercase;
-    margin: 0px 0px 64px;
-    padding: 0px;
+    line-height: 1.875;
+    text-align: center;
+    margin: 0px;
 }
 
-.section-title::after {
-    display: block;
-    content: '';
-    width: 60px;
-    height: 3px;
-    background-color: #f38181;
-    margin: 38px auto 0px;
+.description-section {
+    font-size: 16px;
+    font-family: "Droid Serif", serif;
+    color: rgb(119, 119, 119);
+    font-style: italic;
+    line-height: 1.2;
+    text-align: center;
+    margin: 0px 0px 78px 0px;
 }
 
-.servises {
+.section-items {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    list-style: none;
-    text-decoration: none;
+    align-items: center;
     margin: 0px;
     padding: 0px;
+    list-style: none;
+    text-decoration: none;
 }
 
-.servise-item {
-    flex: 0 0 380px;
-    text-align: left;
-    padding: 0px 10px 0px 80px;
-    margin: 0px 10px 98px;
+.section-item {
+    /* flex: 0, 0, 290px; */
+    width: 290px;
+    padding: 96px 0px 0px;
     background-repeat: no-repeat;
-    background-position: 20px 0;
+    background-position: 50% 0;
 }
 
-.servise-item::before {
+.section-item::before {
     display: block;
     content: '';
 }
 
-.servise-item:nth-last-of-type(-n+3) {
-    margin-bottom: 0px;
+.icon-basket {
+    background-image: url(../img/circle-basket.png);
 }
 
-.icon-alarm {
-    background-image: url(../img/alarm.png);
+.icon-laptop{
+    background-image: url(../img/circle-laptop.png);
 }
 
-.icon-graph {
-    background-image: url(../img/line-graph.png);
-}
-
-.icon-computer {
-    background-image: url(../img/computer.png);
-}
-
-.icon-book {
-    background-image: url(../img/book.png);
-}
-
-.icon-home {
-    background-image: url(../img/home.png);
-}
-
-.icon-image {
-    background-image: url(../img/image.png);
+.icon-locked{
+    background-image: url(../img/circle-locked.png);
 }
 
 .title-item {
-    font-size: 14px;
-    line-height: 1;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #333333;
+    font-size: 18px;
+    font-family: "Montserrat";
+    color: rgb(34, 34, 34);
+    font-weight: 700;
+    line-height: 1.2;
+    text-align: center;
     margin: 0px 0px 12px 0px;
-    padding: 0px;
+
 }
 
-.text-item {
-    font-size: 15px;
-    line-height: 1.6;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 400;
-    color: #999999;
+.description {
+    font-size: 14px;
+    font-family: "Roboto Slab";
+    color: rgb(119, 119, 119);
+    line-height: 1.2;
+    text-align: center;
     margin: 0px;
-    padding: 0px;
 }
+
+
+
+
+
+
+
+
 
 /* Meet our team */
 
-.team-section {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    margin-bottom: 82px;
-}
-
-.text-item-team {
-    width: 954px;
-    text-align: center;
-    margin-bottom: 92px;
-}
-
-.team-items {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    width: 1200px;
-    list-style: none;
-    text-decoration: none;
-    margin: 0px;
-    padding: 0px;
-}
-
-.team-item {
-    background-repeat: no-repeat;
-    background-image: url(../img/backgr1.png);
-}
-
-.cart-item {
-    position: relative;
-    transition: all 0.2s linear;
-    bottom: 0;
-    right: 0;
-    margin-bottom: 28px;
-}
-
-.team-item:hover .cart-item {
-    bottom: 10px;
-    right: 10px;
-}
-
-.team-item:hover .icon-socials {
-    opacity: 1;
-}
-
-.cart-item-graphic {
-    background-image: url(../img/img1.png);
-}
-
-.cart-item-branding {
-    background-image: url(../img/img2.png);
-}
-
-.cart-item-developer {
-    background-image: url(../img/img3.png);
-}
-
-.icon-socials {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 380px;
-    height: 470px;
-    opacity: 0;
-    background: linear-gradient(0deg, rgba(252, 227, 138, 0.9), rgba(243, 129, 129, 0.9));
-    transition: all 0.2s linear;
-    padding: 0px;
-}
-
-.team-link:not(:nth-of-type(4n)) {
-    margin-right: 1px;
-}
-
-.icon-link {
-    display: block;
-    width: 56px;
-    height: 56px;
-    background-repeat: no-repeat;
-    background-position: center;
-}
-
-.team-link {
-    list-style: none;
-    background-color: rgb(252, 227, 138);
-}
-
-.icon-link:hover,
-.icon-link:focus {
-    background-color: rgba(149, 225, 211, 1);
-    transition: all 0.2s linear;
-}
-
-.icon-facebook {
-    background-image: url(../img/facebook.png);
-}
-
-.icon-twitter {
-    background-image: url(../img/twitter.png);
-}
-
-.icon-pinterest {
-    background-image: url(../img/pinterest.png);
-}
-
-.icon-instagram {
-    background-image: url(../img/instagram.png);
-}
-
-.team-item-name {
-    font-size: 14px;
-    line-height: 1;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 400;
-    text-transform: uppercase;
-    color: #333333;
-    margin: 0px 0px 10px 0px;
-    padding: 0px;
-}
-
-.team-item-occupation {
-    line-height: 1.6;
-    font-family: 'Roboto', sans-serif;
-    font-weight: 300;
-    font-style: italic;
-    margin: 0px;
-    padding: 0px;
-}
 
 /* footer */
 
-.main-footer {
+/* .main-footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -443,7 +328,7 @@ input::-webkit-input-placeholder {
 .button:focus {
     color: rgb(234, 240, 239);
     transition: all 0.2s linear;
-}
+} */
 
 .visually-hidden:not(:focus):not(:active),
 input[type="checkbox"].visually-hidden,
