--- a/module-06/css/style.css
+++ b/module-06/css/style.css
@@ -30,25 +30,30 @@ img {
 
 /* header */
 
+.main-header {
+    display: flex;
+}
+
 .main-navigation {
     display: flex;
     justify-content: space-between;
-    align-items: flex-start;
-}
-
-.site-logo {
-    margin: 29px 0px 12px;
+    align-items: flex-end;
+    margin-top: 27px;
+    margin-bottom: 128px;
 }
 
 .navigation-items {
     display: flex;
-    justify-content: space-between;
     flex-wrap: wrap;
-    flex: 0 0 492px;
-    margin: 38px 0px 114px 0px;
+    max-width: 494px;
     padding: 0px;
+    margin: 0px;
     list-style: none;
     text-transform: uppercase;
+}
+
+.navigation-item:not(:nth-child(5n)) {
+    margin-right: 56px;
 }
 
 .navigation-item {
@@ -57,7 +62,6 @@ img {
 }
 
 .nav-link {
-    display: block;
     text-decoration: none;
     font-size: 14px;
     line-height: 1.2;
@@ -65,7 +69,6 @@ img {
     font-weight: 400;
     color: #95e1d3;
     text-align: center;
-    padding-bottom: 9px;
 }
 
 .nav-link::after {
@@ -74,7 +77,7 @@ img {
     width: 0;
     height: 3px;
     background: #f38181;
-    bottom: 0;
+    bottom: -12px;
     left: 50%;
     transition: all 0.2s linear;
 }
@@ -147,13 +150,6 @@ img {
     bottom: -42px;
     transform: translateX(-50%);
     margin: 0px;
-}
-
-.nav-link:hover::after,
-.nav-link:focus::after {
-    width: 100%;
-    left: 0;
-    transition: all 0.2s linear;
 }
 
 .servises {
@@ -370,10 +366,15 @@ img {
     justify-content: space-between;
     align-items: center;
     border-top: 1px solid #e5e5e5;
+    padding: 11px 0px;
 }
 
 .footer-content {
     display: flex;
+}
+
+.footer-copyright {
+    color: #333333;
 }
 
 .footer-text {
@@ -383,6 +384,7 @@ img {
     font-weight: 400;
     color: #333333;
     margin: 0px 4px 0px;
+    padding: 0px;
 }
 
 .footer-link {
@@ -406,7 +408,6 @@ img {
     display: flex;
     justify-content: flex-end;
     height: 40px;
-    margin: 10px 0px;
 }
 
 .input-field {
