--- a/module-07/css/style.css
+++ b/module-07/css/style.css
@@ -72,10 +72,11 @@ img {
 /* header */
 
 .main-header {
-   /* height: auto; */
+    /* display: flex; */
 }
 
-.wrapper{
+.main-header-wrapper {
+    display: flex;
     /* margin-bottom: 98px; */
     /* padding-bottom: 98px; */
 }
@@ -84,8 +85,9 @@ img {
     display: flex;
     justify-content: space-between;
     align-items: flex-end;
-    padding-bottom: 98px;
-    /* margin-bottom: 98px; */
+    width: 100%;
+    /* padding-bottom: 98px; */
+    margin-bottom: 98px;
 }
 
 .site-logo {
@@ -369,7 +371,7 @@ textarea::-webkit-input-placeholder {
 }
 
 .button:hover,
-.button:focus{
+.button:focus {
     box-shadow: 3px 2px 5px 3px rgba(255, 255, 0, .3);
 }
 
